Remove usage of system-rules to avoid using reflection