@@ -11,7 +11,7 @@ dependencies {
     implementation gradleApi()
     testImplementation 'cglib:cglib-nodep:3.2.4'
     testImplementation 'org.apache.commons:commons-io:1.3.2'
-    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
+    testImplementation 'uk.org.webcompere:system-stubs-junit4:2.0.1'
 }
 
 contacts {
@@ -67,12 +67,5 @@ pluginBundle {
             description = 'Nebula Node Plugin'
             tags = ['nebula']
         }
-    }
-}
-
-tasks.withType(Test) {
-    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-        // Necessary to run system-rules that uses reflection to modify system properties and/or env variables
-        jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
 }
